Fix styling on iOS and OSx

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   width: 100%;
   height: 100%;
@@ -33,13 +37,15 @@ select {
 }
 
 .app {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100%;
 }
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   align-items: center;
   height: 4rem;
@@ -51,7 +57,10 @@ select {
 }
 
 .content-container {
-  flex-grow: 1;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  padding-top: 4rem;
 }
 
 .content {
@@ -76,7 +85,7 @@ select {
 }
 
 .floating-container {
-  position: absolute;
+  position: fixed;
   right: 1rem;
   bottom: 1rem;
 }
@@ -95,7 +104,7 @@ select {
 }
 
 .floating-container-center {
-  position: absolute;
+  position: fixed;
   left: 50%;
   bottom: 1rem;
   transform: translateX(-50%);
